feat: Create Dockerfile for server and client, docker-compose.yml
#5

--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,7 @@
   <body>
     <div id="id-info"></div>
     <div id="chat-container">
-      <div id="chat-messages">
-        <!-- 채팅 메시지가 나타날 곳 -->
-      </div>
+      <div id="chat-messages"></div>
       <div id="user-input">
         <input
           type="text"
