--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"
   </head>
   <body>
+    <h2 id="title">Web Chat</h2>
     <div id="id-info"></div>
     <div id="chat-container">
       <div id="chat-messages"></div>
